[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scripts/Fase1.gd" type="Script" id=1]
[ext_resource path="res://TileSets/Chao.tres" type="TileSet" id=2]
[ext_resource path="res://Sprites/Background/background_arlivre.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Player/idle.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/run0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/run1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/jump.png" type="Texture" id=8]
[ext_resource path="res://Sons/dano.wav" type="AudioStream" id=9]
[ext_resource path="res://Sons/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Objetos/Caracol.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Moeda.gd" type="Script" id=12]
[ext_resource path="res://Sprites/moeda.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemy/caracol_run0.png" type="Texture" id=14]
[ext_resource path="res://Font/Gameplay.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Sprites/coracao_vazio.png" type="Texture" id=16]
[ext_resource path="res://Sprites/coracao_cheio.png" type="Texture" id=17]
[ext_resource path="res://Scripts/Estaca.gd" type="Script" id=18]
[ext_resource path="res://Sprites/estacas.png" type="Texture" id=19]
[ext_resource path="res://Sons/Coin.wav" type="AudioStream" id=20]
[ext_resource path="res://Sons/dead.wav" type="AudioStream" id=21]
[ext_resource path="res://Sons/world.wav" type="AudioStream" id=22]
[ext_resource path="res://Scripts/ProximaFase.gd" type="Script" id=23]
[ext_resource path="res://Sprites/proxima_fase.png" type="Texture" id=24]
[ext_resource path="res://Scripts/LimiteChao.gd" type="Script" id=25]
[ext_resource path="res://Sprites/cenario.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.1428
height = 10.2859

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 15 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 30.3459, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 34.0479, 33.9095 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3392, 32 )

[node name="Fase1" type="Node"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 262193, 0, 0, 262194, 0, 0, 262195, 0, 0, 262196, 0, 0, 262197, 0, 0, 393215, 1, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327722, 0, 0, 327723, 0, 0, 458751, 1, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393241, 0, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 0, 0, 393256, 0, 0, 393257, 0, 0, 393258, 1, 0, 393259, 1, 0, 393260, 0, 0, 393261, 0, 0, 393262, 0, 0, 393263, 0, 0, 524287, 1, 0, 458776, 0, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458792, 1, 0, 458793, 1, 0, 458794, 1, 0, 458795, 1, 0, 458796, 1, 0, 458797, 1, 0, 458798, 1, 0, 458799, 1, 0, 589823, 1, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 0, 0, 524325, 0, 0, 524328, 1, 0, 524329, 1, 0, 524330, 1, 0, 524331, 1, 0, 524332, 1, 0, 524333, 1, 0, 524334, 1, 0, 524335, 1, 0, 524336, 0, 0, 524337, 0, 0, 524338, 0, 0, 524339, 0, 0, 524340, 0, 0, 524341, 0, 0, 524342, 0, 0, 524343, 0, 0, 524344, 0, 0, 524345, 0, 0, 524346, 0, 0, 524347, 0, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 589860, 1, 0, 589861, 1, 0, 589864, 1, 0, 589865, 1, 0, 589866, 1, 0, 589867, 1, 0, 589868, 1, 0, 589869, 1, 0, 589870, 1, 0, 589871, 1, 0, 589872, 1, 0, 589873, 1, 0, 589874, 1, 0, 589875, 1, 0, 589876, 1, 0, 589877, 1, 0, 589878, 1, 0, 589879, 1, 0, 589880, 1, 0, 589881, 1, 0, 589882, 1, 0, 589883, 1, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1312, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 5.67965, 10.1587 )
texture = ExtResource( 3 )
centered = false

[node name="Player" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 96, 480 )
z_index = 5
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "idle"

[node name="Corpo" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.732712, 0.732727 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 600

[node name="Dano" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 9 )

[node name="Pulo" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 10 )

[node name="Caracol" parent="." instance=ExtResource( 11 )]
position = Vector2( 935.032, 364.816 )
z_index = 2

[node name="Caracol2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1845.52, 300.177 )
z_index = 2

[node name="Caracol3" parent="." instance=ExtResource( 11 )]
position = Vector2( 3166.13, 235.964 )
z_index = 2

[node name="Moeda" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 178.019, 490.81 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 256, 490.424 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda2"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda2"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda3" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 336, 490.81 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda3"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda3"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda4" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 421.903, 490.81 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda4"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda4"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda5" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1568, 416 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda5"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda5"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda6" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1632, 352 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda6"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda6"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda7" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 2080, 352 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda7"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda7"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda8" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 2144, 416 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda8"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda8"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda9" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 2752, 288 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda9"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda9"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda10" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 3008, 351.615 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda10"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda10"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="Moeda11" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 2912, 351.615 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Moeda11"]
texture = ExtResource( 13 )

[node name="Corpo" type="CollisionShape2D" parent="Moeda11"]
position = Vector2( -0.385529, -0.385529 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="ImagemMoeda" type="Sprite" parent="CanvasLayer"]
position = Vector2( 883.79, 35.7895 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="ImagemMoeda2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 463.903, 33.334 )
scale = Vector2( 4, 4 )
texture = ExtResource( 14 )

[node name="Moeda" type="Label" parent="CanvasLayer"]
margin_left = 949.05
margin_top = 15.85
margin_right = 1066.05
margin_bottom = 53.85
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Caracol" type="Label" parent="CanvasLayer"]
margin_left = 548.211
margin_top = 17.7408
margin_right = 665.211
margin_bottom = 55.7408
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="x" type="Label" parent="CanvasLayer"]
margin_left = 913.0
margin_top = 16.0
margin_right = 937.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x"

[node name="x2" type="Label" parent="CanvasLayer"]
margin_left = 512.161
margin_top = 17.8907
margin_right = 536.161
margin_bottom = 55.8907
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x"

[node name="vida_c" type="Sprite" parent="CanvasLayer"]
position = Vector2( 32, 17.8907 )
texture = ExtResource( 16 )
centered = false

[node name="vida_c2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 96, 17.8907 )
texture = ExtResource( 16 )
centered = false

[node name="vida_c3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 64, 17.8907 )
texture = ExtResource( 16 )
centered = false

[node name="vida_v" type="Sprite" parent="CanvasLayer"]
position = Vector2( 32, 17.8907 )
texture = ExtResource( 17 )
centered = false

[node name="vida_v2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 64, 17.8907 )
texture = ExtResource( 17 )
centered = false

[node name="vida_v3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 96.7327, 17.8907 )
texture = ExtResource( 17 )
centered = false

[node name="Estaca" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 640, 480.733 )
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Estaca"]
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estaca"]
position = Vector2( 0, 22.4136 )
shape = SubResource( 5 )

[node name="Estaca2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1504, 480.733 )
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Estaca2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estaca2"]
position = Vector2( 0, 22.4136 )
shape = SubResource( 5 )

[node name="Estaca3" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 2272, 416 )
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Estaca3"]
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estaca3"]
position = Vector2( 0, 22.4136 )
shape = SubResource( 5 )

[node name="Estaca4" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 3104, 480 )
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Estaca4"]
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estaca4"]
position = Vector2( 0, 22.4136 )
shape = SubResource( 5 )

[node name="PackSons" type="Node" parent="."]
editor/display_folded = true

[node name="Moeda" type="AudioStreamPlayer2D" parent="PackSons"]
stream = ExtResource( 20 )
max_distance = 1e+08

[node name="Caracol" type="AudioStreamPlayer2D" parent="PackSons"]
stream = ExtResource( 21 )
max_distance = 1e+08

[node name="Ambiente" type="AudioStreamPlayer2D" parent="PackSons"]
stream = ExtResource( 22 )
autoplay = true
max_distance = 1e+07

[node name="ProximaFase" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 3808, 480 )
script = ExtResource( 23 )
__meta__ = {
"_edit_group_": true
}
cenas = "res://Scenes/Final.tscn"

[node name="Sprite" type="Sprite" parent="ProximaFase"]
scale = Vector2( 2, 2 )
texture = ExtResource( 24 )

[node name="Corpo" type="CollisionShape2D" parent="ProximaFase"]
position = Vector2( -0.790649, -3.68927 )
shape = SubResource( 6 )

[node name="LimiteChao" type="Area2D" parent="."]
editor/display_folded = true
script = ExtResource( 25 )

[node name="Area" type="CollisionShape2D" parent="LimiteChao"]
position = Vector2( 1696, 640 )
shape = SubResource( 7 )

[node name="Cenario" type="Node" parent="."]
editor/display_folded = true

[node name="Cacto" type="Sprite" parent="Cenario"]
position = Vector2( 505.903, 448 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 420, 3, 14, 21 )

[node name="Mato" type="Sprite" parent="Cenario"]
position = Vector2( 1376, 481 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 398, 13, 13, 11 )

[node name="Flor" type="Sprite" parent="Cenario"]
position = Vector2( 1024, 367.615 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 374, 18, 15, 6 )

[node name="Flor2" type="Sprite" parent="Cenario"]
position = Vector2( 1842.5, 304 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 374, 18, 15, 6 )

[node name="Flor3" type="Sprite" parent="Cenario"]
position = Vector2( 2176, 432 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 374, 18, 15, 6 )

[node name="Flor4" type="Sprite" parent="Cenario"]
position = Vector2( 3392, 237.965 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 374, 18, 15, 6 )

[node name="Flor5" type="Sprite" parent="Cenario"]
position = Vector2( 3208.13, 493.81 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 374, 18, 15, 6 )

[node name="Mato2" type="Sprite" parent="Cenario"]
position = Vector2( 1984, 287.615 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 398, 13, 13, 11 )

[node name="Mato3" type="Sprite" parent="Cenario"]
position = Vector2( 2336, 480 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 398, 13, 13, 11 )

[node name="Mato4" type="Sprite" parent="Cenario"]
position = Vector2( 3392, 481 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 398, 13, 13, 11 )

[node name="Cacto2" type="Sprite" parent="Cenario"]
position = Vector2( 768, 320 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 420, 3, 14, 21 )

[node name="Cacto3" type="Sprite" parent="Cenario"]
position = Vector2( 1184, 448 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 420, 3, 14, 21 )

[node name="Cacto4" type="Sprite" parent="Cenario"]
position = Vector2( 1664, 255.964 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 420, 3, 14, 21 )

[node name="Cacto5" type="Sprite" parent="Cenario"]
position = Vector2( 2592, 320.177 )
scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
centered = false
region_enabled = true
region_rect = Rect2( 420, 3, 14, 21 )

[connection signal="body_entered" from="Moeda" to="Moeda" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda2" to="Moeda2" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda3" to="Moeda3" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda4" to="Moeda4" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda5" to="Moeda5" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda6" to="Moeda6" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda7" to="Moeda7" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda8" to="Moeda8" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda9" to="Moeda9" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda10" to="Moeda10" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Moeda11" to="Moeda11" method="_on_Moeda_body_entered"]
[connection signal="body_entered" from="Estaca" to="Estaca" method="_on_Estaca_body_entered"]
[connection signal="body_entered" from="Estaca2" to="Estaca2" method="_on_Estaca_body_entered"]
[connection signal="body_entered" from="Estaca3" to="Estaca3" method="_on_Estaca_body_entered"]
[connection signal="body_entered" from="Estaca4" to="Estaca4" method="_on_Estaca_body_entered"]
[connection signal="body_entered" from="ProximaFase" to="ProximaFase" method="_on_ProximaFase_body_entered"]
[connection signal="body_entered" from="LimiteChao" to="LimiteChao" method="_on_LimiteChao_body_entered"]
